# Smart-DCN

./: README.md
Sample_3/: .gitignore  README.md  Sample_3.sln
Testbed/: Equipments.txt  MegaSwitchTestbed.docx  README.md  demandGenerator.m  testbed-structure.vsdx
Testbed/Edmond-testbed/Edmond-testbed/Edmond_4/: Blossom.cpp  Blossom.hpp  CMakeLists.txt  Edge.cpp  Edge.hpp  Edmond_1.sln  EdmondsMatching.cpp  EdmondsMatching.hpp  LICENSE  README.md  main.cpp  test.cpp
Testbed/Edmond-testbed/Edmond-testbed/Edmond_4/Edmond_1/: Edmond_1.vcxproj  Edmond_1.vcxproj.filters
Testbed/Edmond-testbed/Edmond-testbed/Edmond_4/tests/: 1000.in  test-10-1.in  test-10-2.in  test-14-1.in  test-6-1.in  test-8-1.in  test-edmt10.in  test-edmt11.in  test-edmt12.in  test-edmt13.in  test-edmt14.in  test-edmt15.in  test-edmt2.in  test-edmt20.in  test-edmt21.in  test-edmt3.in  test-edmt4.in  test-edmt5.in  test-edmt6.in  test-edmt7.in  test-edmt8.in  test-edmt9.in  test-x-1.in  test-x-2.in  test-x-3.in
caffe/: README  createHDF5_sizeChange.py  solver.prototxt  test_conv.prototxt  test_optimal.prototxt  test_simple.prototxt  train_val_ test_optimal.prototxt  train_val_conv.prototxt  train_val_simple.prototxt
smart-net/: .gitignore  ExtractTopoResult-wmw.py  ExtractTopoResult.py  HDF5Generator-wmw.py  HDF5Generator.py  LOG.txt  README.md  conmandToUse  record.ods  smart-net-test.protobuf  smart-net-without-comments.protobuf  smart-net-wmw-conv4.protobuf  smart-net-wmw-test-conv4.protobuf  smart-net-wmw-test.protobuf  smart-net-wmw.protobuf  smart-net.protobuf  solver.prototxt  test.txt  (+1 more)
(+1323 files in other folders)
